--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -2,6 +2,28 @@
 
 $component: #{$prefix}-dropdown;
 
+$icon-w-md: 16px;
+$icon-h-md: 16px;
+$icon-mr-md: 8px;
+$icon-w-lg: 20px;
+$icon-h-lg: 20px;
+$icon-mr-lg: 12px;
+
+// dropdown menu icon 스타일
+@mixin dropdown-menu-icon($width, $height, $margin-right) {
+  .#{$component}-menu-icon {
+    width: $width;
+    height: $height;
+    margin-right: $margin-right;
+
+    svg {
+      width: $width;
+      height: $height;
+    }
+  }
+}
+
+// dropdown menu 공통 스타일
 @mixin dropdown-menu-common {
   display: flex;
 
@@ -13,36 +35,20 @@ $component: #{$prefix}-dropdown;
   }
 }
 
+// dropdown menu md size 스타일 (single, multi)
 @mixin dropdown-menu-md {
   width: 136px;
   border-radius: 4px;
 
-  .#{$component}-menu-icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 8px;
-
-    svg {
-      width: 16px;
-      height: 16px;
-    }
-  }
+  @include dropdown-menu-icon($icon-w-md, $icon-h-md, $icon-mr-md);
 }
 
+// dropdown menu lg size 스타일 (single, multi)
 @mixin dropdown-menu-lg {
   width: 152px;
   border-radius: 4px;
 
-  .#{$component}-menu-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 12px;
-
-    svg {
-      width: 20px;
-      height: 20px;
-    }
-  }
+  @include dropdown-menu-icon($icon-w-lg, $icon-h-lg, $icon-mr-lg);
 }
 
 .#{$component} {
@@ -87,7 +93,7 @@ $component: #{$prefix}-dropdown;
     @apply px-spacing_06 py-spacing_03;
 
     .icon-space {
-      margin-left: 24px;
+      margin-left: $icon-w-md + $icon-mr-md;
     }
   }
 }
@@ -107,7 +113,7 @@ $component: #{$prefix}-dropdown;
     @apply px-spacing_06 py-spacing_04;
 
     .icon-space {
-      margin-left: 32px;
+      margin-left: $icon-w-lg + $icon-mr-lg;
     }
   }
 }
