style: indicate dropdown position

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -43,12 +43,23 @@ $menu-h-lg: 40px;
 }
 
 .#{$component} {
-  @apply p-spacing_02 border-color_layout_04 shadow-shadow_v2;
+  @apply mt-spacing_01 p-spacing_02 bg-color_layout_01 border-color_layout_04 shadow-shadow_v2;
 
+  position: absolute;
   overflow: scroll;
 
   &::-webkit-scrollbar {
     display: none;
+  }
+  .#{$component}-left {
+    left: 0;
+  }
+  .#{$component}-center {
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  .#{$component}-right {
+    right: 0;
   }
 }
 
