style: update border top width in dropdown divider

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -120,7 +120,9 @@ $menu-h-lg: 40px;
 }
 
 .#{$component}-divider {
-  @apply my-spacing_02 text-color_layout_05;
+  @apply my-spacing_02 border-solid border-color_layout_05;
+
+  border-top-width: 1px;
 }
 
 // By Dropdown Size
