--- a/src/components/CheckBox/CheckBox.scss
+++ b/src/components/CheckBox/CheckBox.scss
@@ -58,11 +58,31 @@ $lw_grey60: #8d98a5;
 .#{$component}-mixed::after {
   @apply bg-color_background;
   left: 5px;
-  top: 10.5px;
+  top: 10px;
   width: 14px;
   height: 1px;
   border-radius: 3px;
   transform: rotate(0deg);
+}
+
+.#{$component}-sm {
+  width: 16px;
+  height: 16px;
+
+  &.#{$component}::after {
+    left: 5.5px;
+    top: 3px;
+    width: 5px;
+    height: 9px;
+    border-width: 0 2px 2px 0;
+  }
+
+  &.#{$component}-mixed::after {
+    left: 4.5px;
+    top: 7px;
+    width: 7px;
+    height: 1px;
+  }
 }
 
 .#{$component}-container {
