style: component margin

--- a/src/components/CheckBox/CheckBox.scss
+++ b/src/components/CheckBox/CheckBox.scss
@@ -1,6 +1,9 @@
 @import '../../assets/styles/global.scss';
 
+$container: #{$prefix}-container;
 $component: #{$prefix}-checkbox;
+$label: #{$prefix}-label;
+
 $lw_blue30: #a3c6fa;
 $lw_grey60: #8d98a5;
 
@@ -85,11 +88,32 @@ $lw_grey60: #8d98a5;
   }
 }
 
-.#{$component}-container {
-  @apply flex items-center;
+.#{$container} {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & + & {
+    @apply mt-spacing_06;
+
+    &.#{$container}-sm {
+      @apply mt-spacing_04;
+    }
+  }
 }
 
-.#{$component}-label {
+.#{$label} {
   @apply ml-spacing_06;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #3b424a;
   font-family: 'Spoqa Han Sans Neo';
+
+  &.#{$label}-sm {
+    @apply ml-spacing_04;
+  }
+
+  &.#{$label}-unchecked {
+    color: #8d98a5;
+  }
 }
