--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -8,7 +8,7 @@ $caret-radius: 3px;
 $tooltip-z-index: 5000;
 
 .#{$component} {
-  @apply relative;
+  @apply relative w-max h-max;
 }
 
 .#{$component}-content {
@@ -18,13 +18,6 @@ $tooltip-z-index: 5000;
   height: #{$tooltip-height};
   min-width: 32px;
   white-space: nowrap;
-}
-
-// top
-.#{$component}-top .#{$component}-content {
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, calc(-100% - #{$tooltip-margin}));
 }
 
 // content with caret
@@ -77,6 +70,13 @@ $tooltip-z-index: 5000;
       50%
     );
   }
+}
+
+// top
+.#{$component}-top .#{$component}-content {
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, calc(-100% - #{$tooltip-margin}));
 }
 
 .#{$component}-top-left .#{$component}-content {
