--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -7,10 +7,12 @@ $caret-side-width: 4px;
 $caret-radius: 3px;
 $tooltip-z-index: 5000;
 
+// tooltip wrapper
 .#{$component} {
   @apply relative w-max h-max;
 }
 
+// basic content
 .#{$component}-content {
   @apply bg-color_layout_emphasize_01 text-color_icon_inverse_01 px-spacing_03 py-spacing_02 text-center absolute;
   border-radius: 4px;
@@ -72,7 +74,7 @@ $tooltip-z-index: 5000;
   }
 }
 
-// top
+// content without caret
 .#{$component}-top .#{$component}-content {
   top: 0;
   left: 50%;
@@ -124,16 +126,17 @@ $tooltip-z-index: 5000;
   transform: translate(calc(100% + #{$tooltip-margin}), 50%);
 }
 
+// caret
 .#{$component}-caret:hover:before,
 .#{$component}-caret:focus-within:before {
-  @apply border-color_layout_emphasize_01 border-solid;
+  @apply bg-color_layout_emphasize_01 border-color_layout_emphasize_01 border-solid;
   position: absolute;
   content: '';
-  width: 0px;
-  height: 0px;
+  width: 1px;
+  height: 1px;
   border-width: #{$caret-side-width};
   z-index: #{$tooltip-z-index};
-  border-radius: 0 #{$caret-radius} 0 0;
+  border-top-right-radius: #{$caret-radius};
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
 }
 
@@ -173,11 +176,11 @@ $tooltip-z-index: 5000;
   right: #{$caret-radius};
 }
 
-// translate x좌표 param에 1px 추가 이유: caret과 말풍선 사이 공간 교정
 .#{$component}-left.#{$component}-caret::before {
   left: 0;
   bottom: 50%;
   transform: translate(calc(-100% - #{$tooltip-margin} - 1px), 50%)
+    // translate x좌표 param에 1px 추가 이유: caret과 말풍선 사이 공간 교정
     rotate(45deg);
 }
 
